--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --cor-destaque: #2BDEFD;
     --cor-texto: #D7F9FF;
 }
+
 body {
     background-color: var(--cor-fundo);
     color: var(--cor-texto);
@@ -13,6 +14,7 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+
 .caixa-principal {
     background-color: var(--cor-fundo);
     width: 90%;
@@ -20,6 +22,21 @@ body {
     text-align: center;
     padding: 20px;
 }
+
 h1 {
     color: var(--cor-destaque);
+}
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+
 }
